# case-in-point

./: .gitignore  CaseInPoint.hs  LICENSE  case-in-point.cabal  exam.cabal  exam.hs  readme.md  testandcommit.hs
